html- button feuille conseil pour js

--- a/conseil.html
+++ b/conseil.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="js/navbar-transparent.js"></script>
     <script type="text/javascript" src="js/navbar-prestation.js"></script>
     <script type="text/javascript" src="js/scroll-fluid.js"></script>
+    <script type="text/javascript" src="js/accordeons.js"></script>
     <!-- fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'/>
     <link rel="stylesheet" href="css/font-awesome.css"/>
@@ -68,19 +69,18 @@
                 <h2 class="text-center">Fiches Conseils</h2>
             </div>
         </section>
-
-        <nav class="row nav-prestations">
-            <div class="col-md-1 col-xs-1">
-                <a href="#dent"><i class="fa fa-2x fa-user-md"></i></a>
-                <a href="#yeux-oreilles"><i class="fa fa-2x fa-eye"></i></a>
-                <a href="#pelage"><i class="fa fa-2x fa-paw"></i></a>
-                <a href="#parasite"><i class="fa fa-2x fa-bug"></i></a>
-                <a href="#vaccin-chien"><i class="fa fa-2x fa-plus-square"></i></a>
-                <a href="#vaccin-chat"><i class="fa fa-2x fa-medkit"></i></a>
-                <a href="#id"><i class="fa fa-2x fa-info-circle"></i></a>
-                <a href="#education"><i class="fa fa-2x fa-book"></i></a>
-                <a href="#nav"><i class="fa fa-2x fa-arrow-circle-up"></i></a>
+        <section>    
+            <div>
+                <a href="" onclick="affich_dent()"><i class="fa fa-2x fa-user-md"></i></a>
+                <a href="" onclick="affich_yeux()"><i class="fa fa-2x fa-eye"></i></a>
+                <a href="" onclick="affich_pelage()"><i class="fa fa-2x fa-paw"></i></a>
+                <a href="" onclick="affich_parasite()"><i class="fa fa-2x fa-bug"></i></a>
+                <a href="" onclick="affich_vaccinChien()"><i class="fa fa-2x fa-plus-square"></i></a>
+                <a href="" onclick="affich_vaccinChat()"><i class="fa fa-2x fa-medkit"></i></a>
+                <a href="" onclick="affich_id()"><i class="fa fa-2x fa-info-circle"></i></a>
+                <a href="" onclick="affich_education()"><i class="fa fa-2x fa-book"></i></a>
             </div>
+        </section>
         </nav>
         <!--<div class="separator-objet"></div>-->
 
