--- a/prestation.html
+++ b/prestation.html
@@ -59,18 +59,72 @@
         </section>
 
         <!--<div class="separator-objet"></div>-->
-	<section class="row prestation">
-		<div class="text-center">
-			<a href="" onclick="affich_consultation()"><i class="fa fa-3x fa-stethoscope text-align" ></i></a> 
-			<a href="" onclick="affich_imagerie()"><i class="fa fa-3x fa-camera"></i></a>
-			<a href="" onclick="affich_analyse()"><i class="fa fa-3x fa-medkit"></i></a>
-			<a href="" onclick="affich_chirurgie()"><i class="fa fa-3x fa-heartbeat"></i></a>
-			<a href="" onclick="affich_hospitalisation()"><i class="fa fa-3x fa-hospital-o"></i></a>
-			<a href="" onclick="affich_nac()"><i class="fa fa-3x fa-paw"></i></div></a>
-			<h3 class="text-center">Consultation - Imagerie - Analyse - Chirurgie - Hospitalisation - Nac</h3>
-			<div class="separator-prestation"></div>
-	</section>
+	<section class="row text-center">
 
+            <div class="section-header">
+                <h2 class="text-center text-capitalize">Nos prestations</h2>
+            </div>
+
+            <div class="row1 pad-70">
+
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-2">
+                    <div class="col-md-12">
+                        <i class="fa fa-stethoscope fa-5x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_consultation()"><a href="#">Consultation</a></button>
+                    </div>
+                </div>
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-2">
+                    <div class="col-md-12">
+                        <i class="fa fa-camera fa-5x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_imagerie()"><a href="#">Imagerie</a></button>
+                    </div>
+                </div>
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-2">
+                    <div class="col-md-12">
+                        <i class="fa fa-medkit fa-5x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_analyse()"><a href="#">Analyse sanguine</a></button>
+                    </div>
+                </div>
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-2">
+                    <div class="col-md-12">
+                        <i class="fa fa-heartbeat fa-5x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_chirurgie()"><a href="#">Chirurgie</a></button>
+                    </div>
+                </div>
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-2">
+                    <div class="col-md-12">
+                        <i class="fa fa-hospital-o fa-5x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_hospitalisation()"><a href="#">Hospitalisation</a></button>
+                    </div>
+                </div>
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-2">
+                    <div class="col-md-12">
+                        <i class="fa fa-paw fa-5x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_nac()"><a href="#">NAC</a></button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="separator-prestation"></div>
+	
         <section id="navbar-prestation" class="row prestation2 center-block">
 
             <div id="consultation" class="col-md-offset-2 col-md-8 article-prestation">
