html- ajout boutons bootstrap sur conseils

--- a/conseil.html
+++ b/conseil.html
@@ -57,22 +57,94 @@
             </div>
         </section>
 
-        <!-- section nav icones conseil-->
-        <section class="row prestation">    
-            <div class="text-center">
-                <a href="" onclick="affich_dent()"><i class="fa fa-3x fa-user-md"></i></a>
-                <a href="" onclick="affich_yeux()"><i class="fa fa-3x fa-eye"></i></a>
-                <a href="" onclick="affich_pelage()"><i class="fa fa-3x fa-paw"></i></a>
-                <a href="" onclick="affich_parasite()"><i class="fa fa-3x fa-bug"></i></a>
-                <a href="" onclick="affich_vaccinChien()"><i class="fa fa-3x fa-plus-square"></i></a>
-                <a href="" onclick="affich_vaccinChat()"><i class="fa fa-3x fa-medkit"></i></a>
-                <a href="" onclick="affich_id()"><i class="fa fa-3x fa-info-circle"></i></a>
-                <a href="" onclick="affich_education()"><i class="fa fa-3x fa-book"></i></a>
-                <h3 class="text-center">Dentition - Yeux / Oreilles - Pelage - Parasite - Vaccin / Chien - Vaccin / Chat - Identification -Éducation</h3>
-                <div class="separator-prestation"></div>
+
+        <section class="row text-center">
+
+            <div class="section-header">
+                <h2 class="text-center text-capitalize">Nos fiches conseil</h2>
             </div>
+
+            <div class="row1 pad-70">
+
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-1 col-md-offset-2">
+                    <div class="col-md-12">
+                        <i class="fa fa-user-md fa-5x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_dent()"><a href="#">Dents</a></button>
+                    </div>
+                </div>
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-1">
+                    <div class="col-md-12">
+                        <i class="fa fa-eye fa-5x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_yeux()"><a href="#">Yeux-Oreilles</a></button>
+                    </div>
+                </div>
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-1">
+                    <div class="col-md-12">
+                        <i class="fa fa-paw fa-5x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_pelage()"><a href="#">Pelage</a></button>
+                    </div>
+                </div>
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-1">
+                    <div class="col-md-12">
+                        <i class="fa fa-bug fa-5x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_parasite()"><a href="#">Parasites</a></button>
+                    </div>
+                </div>
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-1">
+                    <div class="col-md-12">
+                        <i class="fa fa-plus-square fa-5x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_vaccinChien()"><a href="#">Vaccin Chien</a></button>
+                    </div>
+                </div>
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-1">
+                    <div class="col-md-12">
+                        <i class="fa fa-medkit fa-5x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_vaccinChat()"><a href="#">Vaccin Chat</a></button>
+                    </div>
+                </div>
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-1">
+                    <div class="col-md-12">
+                        <i class="fa fa-info-circle fa-5x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_id()"><a href="#">Identification</a></button>
+                    </div>
+                </div>
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-1">
+                    <div class="col-md-12">
+                        <i class="fa fa-book fa-5x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_education()"><a href="#">Éducation</a></button>
+                    </div>
+                </div>
+
+
+            </div>
+
         </section>
-        </nav>
+        <div class="separator-prestation"></div>
+    
         <!--<div class="separator-objet"></div>-->
 
         <section id="navbar-prestation" class="row prestation2">
