html- prestations- changement du h2 et suppr h3

--- a/prestation.html
+++ b/prestation.html
@@ -54,16 +54,12 @@
         <!-- section nav icones prestation-->
         <section id="startchange"class="row text-center page-sans-header">
             <div class="section-header">
-                <h2 class="text-center">TARIFS ET PRESTATIONS</h2>
+                <h2 class="text-center">NOS PRESTATIONS</h2>
             </div>
         </section>
 
         <!--<div class="separator-objet"></div>-->
 	<section class="row text-center">
-
-            <div class="section-header">
-                <h2 class="text-center text-capitalize">Nos prestations</h2>
-            </div>
 
             <div class="row1 pad-70">
 
