--- a/conseil.html
+++ b/conseil.html
@@ -53,16 +53,12 @@
         <!-- en-tête du site -->
         <section id="startchange"class="row text-center page-sans-header">
             <div class="section-header">
-                <h2 class="text-center">FICHES CONSEILS</h2>
+                <h2 class="text-center">NOS FICHES CONSEILS</h2>
             </div>
         </section>
 
 
         <section class="row text-center">
-
-            <div class="section-header">
-                <h2 class="text-center text-capitalize">Nos fiches conseil</h2>
-            </div>
 
             <div class="row1 pad-70">
 
