html- remplacement des photos sur presta gimp- redimension des img

--- a/prestation.html
+++ b/prestation.html
@@ -125,7 +125,7 @@
 
             <div id="consultation" class="col-md-offset-2 col-md-8 article-prestation">
                 <div class="col-md-4">
-                    <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
+                    <img class="img-responsive img-circle" src="images/Consultation_3.JPG" alt="chat">
                 </div>
                 <div class="col-md-8">
                     <h3><i class="fa fa-stethoscope"></i> CONSULTATION</h3>
@@ -147,7 +147,7 @@
 
             <div id="imagerie" class="col-md-offset-2 col-md-8 article-prestation">
                 <div class="col-md-4">
-                    <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
+                    <img class="img-responsive img-circle" src="images/radiologie_2.JPG" alt="chat">
                 </div>
                 <div class="col-md-8">
                     <h3><i class="fa fa-camera"></i> IMAGERIE</h3>
@@ -160,7 +160,7 @@
 
             <div id="analyse" class="col-md-offset-2 col-md-8 article-prestation">
                 <div class="col-md-4">
-                    <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
+                    <img class="img-responsive img-circle" src="images/Labo_analyse_microscopique.JPG" alt="chat">
                 </div>
                 <div class="col-md-8">
                     <h3><i class="fa fa-medkit"></i> Analyse sanguine</h3>
@@ -176,7 +176,7 @@
 
             <div id="chirurgie" class="col-md-offset-2 col-md-8 article-prestation">
                 <div class="col-md-4">
-                    <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
+                    <img class="img-responsive img-circle" src="images/chirurgie_1.JPG" alt="chat">
                 </div>
                 <div class="col-md-8">
                     <h3><i class="fa fa-heartbeat"></i> CHIRURGIE</h3>
@@ -194,7 +194,7 @@
 
             <div id="hospitalisation" class="col-md-offset-2 col-md-8 article-prestation">
                 <div class="col-md-4">
-                    <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
+                    <img class="img-responsive img-circle" src="images/Chatterie.JPG" alt="chat">
                 </div>
                 <div class="col-md-8">
                     <h3><i class="fa fa-hospital-o"></i> HOSPITALISATION</h3>
@@ -209,7 +209,7 @@
 
             <div id="nac" class="col-md-offset-2 col-md-8 article-prestation">
                 <div class="col-md-4">
-                    <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
+                    <img class="img-responsive img-circle" src="images/NAC.JPG" alt="chat">
                 </div>
                 <div class="col-md-8">
                     <h3><i class="fa fa-paw"></i> NAC</h3>
