html- ajout boutton bootstrap vente

--- a/vente.html
+++ b/vente.html
@@ -61,14 +61,37 @@
 
         <!--<div class="separator-objet"></div>-->
         <section class="row prestation">
-            <div class="text-center">
-                <a href="" onclick="affich_chirurgie()"><i class="fa fa-3x fa-medkit"></i></a>
-                <a href="" onclick="affich_hospitalisation()"><i class="fa fa-3x fa-heart"></i></a>
-                <a href="" onclick="affich_nac()"><i class="fa fa-3x fa-list "></i></div></a>
-                <h3 class="text-center">MÉDICAMENT - ALIMENTATION - INDEX</h3>
-                <div class="separator-prestation"></div>
-        </section>
+            <div class="text-center pad-70">
 
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <div class="col-md-12">
+                        <i class="fa fa-medkit fa-4x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_medicament()"><a href="#">Médicament</a></button>
+                    </div>
+                </div>
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <div class="col-md-12">
+                        <i class="fa fa-heart fa-4x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_alimentation()"><a href="#">Alimentation</a></button>
+                    </div>
+                </div>
+                <!-- bloc 1/6 -->
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <div class="col-md-12">
+                        <i class="fa fa-list fa-4x"></i>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-default btn-m-70" onclick="affich_index()"><a href="#">Index</a></button>
+                    </div>
+                </div>
+        </section>
+        <div class="separator-prestation"></div>
         <section id="navbar-prestation" class="row prestation2 center-block">
 
             <div id="medicament" class="col-md-offset-2 col-md-8 article-prestation">
