modif couleur navbar - effet d'onglet ok

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             </ul>
         </nav>
 
-        <div class="row text-center section-header">
+        <div class="row text-center section-header page-sans-header">
             <h2 id="startchange">NOUS CONTACTER</h2>
         </div>
         
