--- a/vente.html
+++ b/vente.html
@@ -57,7 +57,7 @@
             <div class="text-center pad-70">
 
                 <!-- bloc 1/6 -->
-                <div class="col-xs-12 col-sm-4 col-md-4">
+                <div class="col-xs-12 col-sm-4 col-md-2 col-md-offset-3">
                     <div class="col-md-12">
                         <i class="fa fa-medkit fa-4x"></i>
                     </div>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <!-- bloc 1/6 -->
-                <div class="col-xs-12 col-sm-4 col-md-4">
+                <div class="col-xs-12 col-sm-4 col-md-2">
                     <div class="col-md-12">
                         <i class="fa fa-heart fa-4x"></i>
                     </div>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <!-- bloc 1/6 -->
-                <div class="col-xs-12 col-sm-4 col-md-4">
+                <div class="col-xs-12 col-sm-4 col-md-2">
                     <div class="col-md-12">
                         <i class="fa fa-list fa-4x"></i>
                     </div>
@@ -119,7 +119,7 @@ N'hésitez pas à demander conseil afin de trouver l'aliment physiologique adapt
         <img class="img-responsive img-circle" src="images/Espace_Vente.JPG" alt="chat">
     </div>
     <div class="col-md-8">
-        <h3><i class="fa fa-list "></i> INDEX</h3>
+        <h3><i class="fa fa-list"></i> INDEX</h3>
         <h4>Les listes c'est pratique :</h4>
         <ul class="list-group">
             <li class="list-group-item">First item</li>
