html- vente- correction h2

--- a/vente.html
+++ b/vente.html
@@ -48,7 +48,7 @@
         <!-- section nav icones prestation-->
         <section id="startchange" class="row text-center page-sans-header">
             <div class="section-header">
-                <h2 class="text-center">ESPACES DE VENTE</h2>
+                <h2 class="text-center">ESPACE DE VENTE</h2>
             </div>
         </section>
 
