--- a/conseil.html
+++ b/conseil.html
@@ -57,72 +57,56 @@
 
                 <!-- bloc 1/6 -->
                 <div class="col-xs-12 col-sm-4 col-md-2 col-md-offset-2">
-                    <div class="col-md-12">
-                        <i class="fa fa-user-md fa-4x"></i>
-                    </div>
+                        <i class="fa fa-user-md fa-4x text-center"></i>
                     <div>
                         <button class="btn btn-default" onclick="affich_dent()"><a href="#">Dents</a></button>
                     </div>
                 </div>
                 <!-- bloc 1/6 -->
                 <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="col-md-12">
-                        <i class="fa fa-eye fa-4x"></i>
-                    </div>
+                        <i class="fa fa-eye fa-4x text-center"></i>
                     <div>
                         <button class="btn btn-default" onclick="affich_yeux()"><a href="#">Yeux-Oreilles</a></button>
                     </div>
                 </div>
                 <!-- bloc 1/6 -->
                 <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="col-md-12">
-                        <i class="fa fa-paw fa-4x"></i>
-                    </div>
+                        <i class="fa fa-paw fa-4x text-center"></i>
                     <div>
                         <button class="btn btn-default" onclick="affich_pelage()"><a href="#">Pelage</a></button>
                     </div>
                 </div>
                 <!-- bloc 1/6 -->
                 <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="col-md-12">
-                        <i class="fa fa-bug fa-4x"></i>
-                    </div>
+                        <i class="fa fa-bug fa-4x text-center"></i>
                     <div>
                         <button class="btn btn-default" onclick="affich_parasite()"><a href="#">Parasites</a></button>
                     </div>
                 </div>
                 <!-- bloc 1/6 -->
-                <div class="col-xs-12 col-sm-4 col-md-2 col-md-offset-2 fa-prestation">
-                    <div class="col-md-12">
-                        <i class="fa fa-plus-square fa-4x"></i>
-                    </div>
+                <div class="col-xs-12 col-sm-4 col-md-2 col-md-offset-2 fa-separator">
+                        <i class="fa fa-plus-square fa-4x text-center"></i>
                     <div>
                         <button class="btn btn-default" onclick="affich_vaccinChien()"><a href="#">Vaccin Chien</a></button>
                     </div>
                 </div>
                 <!-- bloc 1/6 -->
-                <div class="col-xs-12 col-sm-4 col-md-2 fa-prestation">
-                    <div class="col-md-12">
-                        <i class="fa fa-medkit fa-4x"></i>
-                    </div>
+                <div class="col-xs-12 col-sm-4 col-md-2 fa-separator">
+                        <i class="fa fa-medkit fa-4x text-center"></i>
                     <div>
                         <button class="btn btn-default" onclick="affich_vaccinChat()"><a href="#">Vaccin Chat</a></button>
                     </div>
                 </div>
                 <!-- bloc 1/6 -->
-                <div class="col-xs-12 col-sm-4 col-md-2 fa-prestation">
-                    <div class="col-md-12">
-                        <i class="fa fa-info-circle fa-4x"></i>
-                    </div>
+                <div class="col-xs-12 col-sm-4 col-md-2 fa-separator">
+                        <i class="fa fa-info-circle fa-4x text-center"></i>
                     <div>
                         <button class="btn btn-default" onclick="affich_id()"><a href="#">Identification</a></button>
                     </div>
                 </div>
                 <!-- bloc 1/6 -->
-                <div class="col-xs-12 col-sm-4 col-md-2 fa-prestation">
-                    <div class="col-md-12">
-                        <i class="fa fa-book fa-4x"></i>
-                    </div>
+                <div class="col-xs-12 col-sm-4 col-md-2 fa-separator">
+                        <i class="fa fa-book fa-4x text-center"></i>
                     <div>
                         <button class="btn btn-default" onclick="affich_education()"><a href="#">Éducation</a></button>
                     </div>
@@ -136,7 +120,7 @@
     
         <!--<div class="separator-objet"></div>-->
 
-        <section id="navbar-prestation" class="row prestation2">
+        <section id="navbar-prestation" class="row espace-footer">
 
             <div id="dent" class="col-md-offset-2 col-md-8 article-prestation">
                 <div class="col-md-4">
@@ -144,6 +128,7 @@
                 </div>
                 <div class="col-md-8">
                     <h3><i class="fa fa-user-md"></i> Hygiène dentaire</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
@@ -155,6 +140,7 @@
                 <div class="col-md-8">
                     <h3><i class="fa fa-eye"></i> Hygiène des yeux et des oreilles</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
 
@@ -164,6 +150,7 @@
                 </div>
                 <div class="col-md-8">
                     <h3><i class="fa fa-paw"></i> Entretien du pelage</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
@@ -175,6 +162,7 @@
                 <div class="col-md-8">
                     <h3><i class="fa fa-bug"></i> Parasites externes et internes</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
 
@@ -184,6 +172,7 @@
                 </div>
                 <div class="col-md-8">
                     <h3><i class="fa fa-plus-square"></i> Pourquoi vacciner votre chien ?</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
@@ -195,6 +184,7 @@
                 <div class="col-md-8">
                     <h3><i class="fa fa-medkit"></i> Pourquoi vacciner votre chat ?</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
 
@@ -205,6 +195,7 @@
                 <div class="col-md-8">
                     <h3><i class="fa fa-info-circle"></i> Pourquoi et comment faire identifier vos animaux ?</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
 
@@ -214,6 +205,7 @@
                 </div>
                 <div class="col-md-8">
                     <h3><i class="fa fa-book"></i> Éducation</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
