--- a/prestation.html
+++ b/prestation.html
@@ -58,63 +58,51 @@
 
                 <!-- bloc 1/6 -->
                 <div class="col-xs-12 col-sm-4 col-md-2">
+                        <i class="fa fa-stethoscope fa-4x text-center"></i>
                     <div class="col-md-12">
-                        <i class="fa fa-stethoscope fa-4x"></i>
-                    </div>
-                    <div class="col-md-12">
-                        <button class="btn btn-default btn-m-70" onclick="affich_consultation()"><a href="#">Consultation</a></button>
+                        <button class="btn btn-default" onclick="affich_consultation()"><a href="#">Consultation</a></button>
                     </div>
                 </div>
                 <!-- bloc 1/6 -->
                 <div class="col-xs-12 col-sm-4 col-md-2">
+                        <i class="fa fa-camera fa-4x text-center"></i>
                     <div class="col-md-12">
-                        <i class="fa fa-camera fa-4x"></i>
-                    </div>
-                    <div class="col-md-12">
-                        <button class="btn btn-default btn-m-70" onclick="affich_imagerie()"><a href="#">Imagerie</a></button>
+                        <button class="btn btn-default" onclick="affich_imagerie()"><a href="#">Imagerie</a></button>
                     </div>
                 </div>
                 <!-- bloc 1/6 -->
                 <div class="col-xs-12 col-sm-4 col-md-2">
+                        <i class="fa fa-medkit fa-4x text-center"></i> 
                     <div class="col-md-12">
-                        <i class="fa fa-medkit fa-4x"></i>
-                    </div>
-                    <div class="col-md-12">
-                        <button class="btn btn-default btn-m-70" onclick="affich_analyse()"><a href="#">Analyse sanguine</a></button>
+                        <button class="btn btn-default" onclick="affich_analyse()"><a href="#">Analyses</a></button>
                     </div>
                 </div>
                 <!-- bloc 1/6 -->
                 <div class="col-xs-12 col-sm-4 col-md-2">
+                        <i class="fa fa-heartbeat fa-4x text-center"></i>
                     <div class="col-md-12">
-                        <i class="fa fa-heartbeat fa-4x"></i>
-                    </div>
-                    <div class="col-md-12">
-                        <button class="btn btn-default btn-m-70" onclick="affich_chirurgie()"><a href="#">Chirurgie</a></button>
+                        <button class="btn btn-default" onclick="affich_chirurgie()"><a href="#">Chirurgie</a></button>
                     </div>
                 </div>
                 <!-- bloc 1/6 -->
                 <div class="col-xs-12 col-sm-4 col-md-2">
+                        <i class="fa fa-hospital-o fa-4x text-center"></i>
                     <div class="col-md-12">
-                        <i class="fa fa-hospital-o fa-4x"></i>
-                    </div>
-                    <div class="col-md-12">
-                        <button class="btn btn-default btn-m-70" onclick="affich_hospitalisation()"><a href="#">Hospitalisation</a></button>
+                        <button class="btn btn-default" onclick="affich_hospitalisation()"><a href="#">Hospitalisation</a></button>
                     </div>
                 </div>
                 <!-- bloc 1/6 -->
                 <div class="col-xs-12 col-sm-4 col-md-2">
+                        <i class="fa fa-paw fa-4x text-center"></i>
                     <div class="col-md-12">
-                        <i class="fa fa-paw fa-4x"></i>
-                    </div>
-                    <div class="col-md-12">
-                        <button class="btn btn-default btn-m-70" onclick="affich_nac()"><a href="#">NAC</a></button>
+                        <button class="btn btn-default" onclick="affich_nac()"><a href="#">NAC</a></button>
                     </div>
                 </div>
             </div>
         </section>
         <div class="separator-prestation"></div>
 	
-        <section id="navbar-prestation" class="row prestation2 center-block">
+        <section id="navbar-prestation" class="row espace-footer center-block">
 
             <div id="consultation" class="col-md-offset-2 col-md-8 article-prestation">
                 <div class="col-md-4">
