Rectification liste espace vente

--- a/vente.html
+++ b/vente.html
@@ -113,31 +113,31 @@
     <div class="col-md-4">
         <img class="img-responsive img-circle" src="images/Espace_Vente.JPG" alt="chat">
     </div>
-    <div class="col-md-8 liste-vente">
-        <h3><i class="fa fa-list"></i>INDEX</h3>
-        <h4>Les listes c'est pratique :</h4>
-        <ul class=" ">
-            <li class="">First item</li>
-            <li class="">Second item</li>
-            <li class="">Third item</li>
-            <li class="">First item</li>
-            <li class="">Second item</li>
-            <li class="">Third item</li>
-            <li class="">First item</li>
-            <li class="">Second item</li>
-            <li class="">Third item</li>
-            <li class="">First item</li>
-            <li class="">Second item</li>
-            <li class="">Third item</li>
-            <li class="">First item</li>
-            <li class="">Second item</li>
-            <li class="">Third item</li>
-            <li class="">First item</li>
-            <li class="">Second item</li>
-            <li class="">Third item</li>
-            <li class="">First item</li>
-            <li class="">Second item</li>
-            <li class="">Third item</li>
+    <div class="col-md-8">
+        <h3><i class="fa fa-list"></i> INDEX</h3>
+        <h4>Retrouver vos produits sur :</h4><a href="http://www.10petitszebres.com">10petitszebres</a></h4>
+        <ul class="list-group">
+            <li class="list-group-item">First item</li>
+            <li class="list-group-item">Second item</li>
+            <li class="list-group-item">Third item</li>
+            <li class="list-group-item">First item</li>
+            <li class="list-group-item">Second item</li>
+            <li class="list-group-item">Third item</li>
+            <li class="list-group-item">First item</li>
+            <li class="list-group-item">Second item</li>
+            <li class="list-group-item">Third item</li>
+            <li class="list-group-item">First item</li>
+            <li class="list-group-item">Second item</li>
+            <li class="list-group-item">Third item</li>
+            <li class="list-group-item">First item</li>
+            <li class="list-group-item">Second item</li>
+            <li class="list-group-item">Third item</li>
+            <li class="list-group-item">First item</li>
+            <li class="list-group-item">Second item</li>
+            <li class="list-group-item">Third item</li>
+            <li class="list-group-item">First item</li>
+            <li class="list-group-item">Second item</li>
+            <li class="list-group-item">Third item</li>
         </ul>
     </div>
 </section>
