Index retirer analyse sanguine

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         <i class="fa fa-medkit fa-5x"></i>
                     </div>
                     <div class="col-md-12">
-                        <button class="btn btn-default btn-m-70"><a href="#">Analyse sanguine</a></button>
+                        <button class="btn btn-default btn-m-70"><a href="#">Analyses</a></button>
                     </div>
                 </div>
                 <!-- bloc 1/6 -->
