html- all- add small footer

--- a/index.html
+++ b/index.html
@@ -334,7 +334,11 @@
             </div>
 
         </section>
-
+<section class="row">
+        <footer class="col-md-12">
+		<h4>123 - VETO</h4>
+	</footer>
+	</section>
 
         </section>
     </div>
