--- a/prestation.html
+++ b/prestation.html
@@ -201,7 +201,11 @@
                 </div>
             </div>
         </section>
-
+<section class="row">
+        <footer class="col-md-12">
+		<h4>123 - VETO</h4>
+	</footer>
+	</section>
 </div>
 </body>
 
