--- a/conseil.html
+++ b/conseil.html
@@ -211,6 +211,11 @@
             </div>
 
         </section>
+<section class="row">
+        <footer class="col-md-12">
+		<h4>123 - VETO</h4>
+	</footer>
+	</section>
     </div>
 </body>
 
