--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,12 @@
                 <div class ="map" style='overflow:hidden;height:382px;width:600px;'> <div id='gmap_canvas' style='height:440px;width:630px;'></div><div><small><a href="http://embedgooglemaps.com">									google maps carte							</a></small></div><div><small><a href="http://youtubeembedcode.com">embed youtube</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:14,center:new google.maps.LatLng(47.431279412515984,-2.077201838623073),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(47.431279412515984,-2.077201838623073)});infowindow = new google.maps.InfoWindow({content:'<strong>Clinique Vétérinaire du Docteur Wintz</strong><br>32 Rue du Vélodrome, 44160 Pontchâteau<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
             </div>
         </div>
-        
+
+	<section class="row">
+        <footer class="col-md-12">
+		<h4>123 - VETO</h4>
+	</footer>
+	</section>
         
     </div>
 </body>
