--- a/vente.html
+++ b/vente.html
@@ -141,7 +141,11 @@
         </ul>
     </div>
 </section>
-
+<section class="row">
+        <footer class="col-md-12">
+		<h4>123 - VETO</h4>
+	</footer>
+	</section>
         </div>
 </body>
 
