Prise de rendez-vous

--- a/priserdv.html
+++ b/priserdv.html
@@ -103,13 +103,15 @@
                 </div>
             </form>
 
-        <form class="col-md-8">
+            <form class="col-md-8">
                 <label for="message">Votre message:</label>
                 <br/>
                 <textarea id="message" name="message" rows="15" cols="40" class="form-control"></textarea>
                 <br/>
-                <input type="submit" value="Envoyer" class="btn btn-default center-block" />
+                <input type="submit" value="Envoyer" class="btn btn-default" />
             </form>
+            
+            <img src="images/calendrierex.png" alt="calendrier" class="img-responsive">
 
         </div>
 
