--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,8 @@
                 <li onclick="location.href='conseil.html';"><a href="#">Fiches conseil</a></li>
                 
                 <li onclick="location.href='vente.html';"><a href="#">Espace vente</a></li>
+
+		<li onclick="location.href='priserdv.html';"><a href="#">Prise de rdv</a></li>
                 
                 <li class="active" onclick="location.href='contact.html';"><a href="#">Contact</a></li>
             </ul>
