--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 
                 <li onclick="location.href='vente.html';"><a href="#">Espace vente</a></li>
 
+		<li onclick="location.href='priserdv.html';"><a href="#">Prise de rdv</a></li>
+
                 <li onclick="location.href='contact.html';"><a href="#">Contact</a></li>
             </ul>
         </nav>
