--- a/priserdv.html
+++ b/priserdv.html
@@ -38,7 +38,9 @@
 
                 <li onclick="location.href='vente.html';"><a href="#">Espace vente</a></li>
 
-                <li class="active" onclick="location.href='contact.html';"><a href="#">Contact</a></li>
+		<li class="active" onclick="location.href='priserdv.html';"><a href="#">Prise de rdv</a></li>
+
+                <li onclick="location.href='contact.html';"><a href="#">Contact</a></li>
             </ul>
         </nav>
 
