--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul id="menu">
                 <li class="active" onclick="location.href='index.html';"><a href="#">Accueil</a></li>
 
-                <li onclick="location.href='prestation.html';"><a href="#">Prestation</a></li>
+                <li onclick="location.href='prestation.html';"><a href="#">Prestations</a></li>
 
                 <li onclick="location.href='conseil.html';"><a href="#">Fiches conseil</a></li>
 
