modif presta - aside et mise en page

--- a/priserdv.html
+++ b/priserdv.html
@@ -113,9 +113,10 @@
                 <input type="submit" value="Envoyer" class="btn btn-default" />
             </form>
             
-            <img src="images/calendrierex.png" alt="calendrier" class="img-responsive">
+            <img src="images/calendrierex.png" alt="calendrier" class="img-responsive calendar">
 
         </div>
+        
 
 <section class="row">
             <footer class="col-md-12">
