ajout aside sur presta et conseils

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <!-- infos du header -->
                 <div>
                     <h1>123 VETO - Clinique Vétérinaire</h1>
-                    <h2>Dr Eric Wintz - Aurélie Mayoussier</h2>
+                    <h2>Dr Eric Wintz - Dr Aurélie Mayoussier</h2>
                     <!--
                     <div class="separator-header"></div>
                     -->
