--- a/prestation.html
+++ b/prestation.html
@@ -48,7 +48,7 @@
 
 
         <div class="row">
-            <!-- ASIDE -->
+            <!-- aside -->
             <aside class="col-md-3 page-sans-header">
 
                 <h2>Prise de rendez-vous</h2>
@@ -101,7 +101,8 @@
                 <div class="aside-separator"></div>
 
             </aside>
-
+            
+            <!-- corps -->
             <div class="part-left col-md-9">
                 <!-- section nav icones prestation-->
                 <section id="startchange" class="row text-center page-sans-header">
@@ -310,6 +311,8 @@
                     </div>
                 </footer>
             </section>
+            <!-- /footer -->
+            
         </div>
     </div>
 </body>
