--- a/prestation.html
+++ b/prestation.html
@@ -32,15 +32,15 @@
                 <span class="unfold-deco"></span>
             </div>
             <ul id="menu">
-                <li onclick="location.href='index.html';"><a href="#">Accueil</a></li>
+                <li class="active" onclick="location.href='index.html';"><a href="#">Accueil</a></li>
 
-                <li class="active" onclick="location.href='prestation.html';"><a href="#">Prestations</a></li>
+                <li onclick="location.href='prestation.html';"><a href="#">Prestations</a></li>
 
                 <li onclick="location.href='conseil.html';"><a href="#">Fiches conseil</a></li>
 
                 <li onclick="location.href='vente.html';"><a href="#">Espace vente</a></li>
 
-                <li onclick="location.href='priserdv.html';"><a href="#">Prise de rdv</a></li>
+		<li onclick="location.href='priserdv.html';"><a href="#">Prise de rdv</a></li>
 
                 <li onclick="location.href='contact.html';"><a href="#">Contact</a></li>
             </ul>
