ajout classe bloc-principal

--- a/conseil.html
+++ b/conseil.html
@@ -100,7 +100,7 @@
 
             </aside>
         
-        <div class="col-md-9 part-left">
+        <div class="col-md-9 part-left bloc-principal">
         <!-- en-tête du site -->
         <section id="startchange"class="row text-center page-sans-header">
             <div class="section-header">
