--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
                 <div class="aside-separator"></div>
        </aside>
        
-       <section class="part-left col-md-9">
+       <section class="part-left col-md-9 bloc-principal">
         <div class="text-center section-header page-sans-header">
             <h2 id="startchange">NOUS CONTACTER</h2>
         </div>
