--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </aside>
 
             <!--section équipe-->
-            <div class="part-left col-md-9">
+            <div class="part-left col-md-9 bloc-principal">
                 <section class="row">
 
                     <div class="section-header">
