--- a/prestation.html
+++ b/prestation.html
@@ -103,7 +103,7 @@
             </aside>
             
             <!-- corps -->
-            <div class="part-left col-md-9">
+            <div class="part-left col-md-9 bloc-principal">
                 <!-- section nav icones prestation-->
                 <section id="startchange" class="row text-center page-sans-header">
                     <div class="section-header">
