--- a/vente.html
+++ b/vente.html
@@ -98,7 +98,7 @@
                 <div class="aside-separator"></div>
         </aside>
 
-        <section class="part-left col-md-9">
+        <section class="part-left col-md-9 bloc-principal">
             <!-- section nav icones prestation-->
             <section id="startchange" class="row text-center page-sans-header">
                 <div class="section-header">
