--- a/priserdv.html
+++ b/priserdv.html
@@ -48,9 +48,9 @@
             <h2 id="startchange">PRISE DE RENDEZ-VOUS</h2>
         </div>
 
-        <div class="row pad-70">
+        <div class="row pad-70 col-md-offset-2">
 
-            <form class="col-md-4">
+            <form class="col-md-5">
                 <label for="nom">Prénom et nom :</label>
                 <br/>
                 <input id="nom" type="text" name="name" class="form-control" />
@@ -68,20 +68,20 @@
                         <option>Indifférent</option>
                     </select>
                 </div>
-
+                
                 <div class="form-group">
-                    <label for="sel1">Calendrier :</label>
-                    <div class='input-group date' id='datetimepicker5'>
-                        <input type='text' class="form-control" />
-                        <span class="input-group-addon">
+                <label for="sel1">Calendrier :</label>
+                <div class='input-group date' id='datetimepicker5'>
+                    <input type='text' class="form-control" />
+                    <span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
-                        </span>
-                    </div>
+                    </span>
+                </div>
                 </div>
             </form>
 
 
-            <form class="col-md-4">
+            <form class="col-md-5">
                 <label for="nom">E-mail:</label>
                 <br/>
                 <input id="nom" type="text" name="name" class="form-control" />
@@ -101,7 +101,7 @@
                 </div>
             </form>
             <br class="col-md-12"></br>
-            <form class="col-md-8">
+            <form class="col-md-10">
                 <label for="message">Votre message:</label>
                 <br/>
                 <textarea id="message" name="message" rows="15" cols="40" class="form-control"></textarea>
