html- homepage- rajout alt sur portrait

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
                     <div class="col-md-6 pad-35">
                         <div class="col-md-12">
-                            <img class="img-responsive img-circle avatar" src="images/equip_Dr_Eric%20Wintz.JPG" alt="" />
+                            <img class="img-responsive img-circle avatar" src="images/equip_Dr_Eric%20Wintz.JPG" alt="Dr Eric Wintz" />
                         </div>
                         <div class="col-md-12">
                             <h3 class="text-center text-uppercase">Dr Eric Wintz</h3>
@@ -144,10 +144,10 @@
 
                     <div class="col-md-6 pad-15-35">
                         <div class="col-md-12">
-                            <img class="img-responsive img-circle avatar" src="images/equip_Dr_Aur%C3%A9lie_Mayoussier.JPG" alt="" />
+                            <img class="img-responsive img-circle avatar" src="images/equip_Dr_Aur%C3%A9lie_Mayoussier.JPG" alt="Dr Aurélie Mayoussier" />
                         </div>
                         <div class="col-md-12">
-                            <h3 class="text-center text-uppercase">Aurélie Mayoussier</h3>
+                            <h3 class="text-center text-uppercase">Dr Aurélie Mayoussier</h3>
                             <p class="text-center">Dr Aurélie Mayoussier Diplômée de l’école vétérinaire de MaisonsAlfort en 2008, elle se passionne pour la médecine de l’élevage et de la reproduction et la médecine des NAC.</p>
                             <p class="text-center">Le Dr Mayoussier possède deux chats Pratchett et Bubule ainsi que Bambou, chien loup de Saarloos.</p>
                         </div>
